--- a/utils.css
+++ b/utils.css
@@ -129,7 +129,7 @@
   padding: 30px;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 5px;
 }
@@ -141,17 +141,19 @@ del {
 .product-wrapper {
   width: 100%;
   width: calc(25% - 20px);
-  background: #f1eded;
+  background: #f5f5f5;
   overflow: hidden;
   padding: 60px;
   border-radius: 10px 10px 10px 10px;
   transform: scale(0.95);
+    margin-right: 3rem;
+
 
 }
 
 .product {
   width: 100%;
-  background: #f1eded;
+  background: #f5f5f5;
 
 }
 
