--- a/style.css
+++ b/style.css
@@ -82,15 +82,16 @@ color: black;
 
 
 section#contact-us {
-  border-radius: 15px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+
   padding: 2em 0;
-  width: 70vw;
+  width: 100%;
 }
 
 section#contact-us h2 {
-  margin-bottom: 1em;
-  font-size: 1.5em;
+ margin-bottom: 1em;
+  font-size:20px;
+  display: flex;
+  justify-content: center;
 }
 
 section#contact-us p {
@@ -121,7 +122,6 @@ section#contact-us button {
   color: white;
   padding: 0.75em 1em;
   border: none;
-  width: 30vw;
   height: 45px;
   text-align: center;
   border-radius: 15px;
