--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ section#contact-us {
 
 section#contact-us h2 {
   margin-bottom: 1em;
-  font-size: 1.5em;
+  font-size: 20px;
 }
 
 section#contact-us p {
